--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>1.3.7.RELEASE</version>
 	</parent>
 
-	<groupId>com.liumapp.demo.hystrix</groupId>
-	<artifactId>spring-cloud-hystrix-demo</artifactId>
+	<groupId>com.liumapp.demo.feign</groupId>
+	<artifactId>spring-cloud-feign-demo</artifactId>
 	<version>v1.0.0</version>
 	<packaging>pom</packaging>
 
