--- a/feign-demo-eureka/pom.xml
+++ b/feign-demo-eureka/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.liumapp.demo.hystrix</groupId>
-    <artifactId>spring-cloud-hystrix-demo</artifactId>
+    <groupId>com.liumapp.demo.feign</groupId>
+    <artifactId>spring-cloud-feign-demo</artifactId>
     <version>v1.0.0</version>
   </parent>
 
-  <groupId>com.liumapp.demo.hystrix.eureka</groupId>
-  <artifactId>hystrix-demo-eureka</artifactId>
+  <groupId>com.liumapp.demo.feign.eureka</groupId>
+  <artifactId>feign-demo-eureka</artifactId>
   <version>v1.0.0</version>
   <packaging>jar</packaging>
 
@@ -18,7 +18,7 @@
     <java.version>1.8</java.version>
   </properties>
 
-  <name>hystrix-demo-eueka</name>
+  <name>feign-demo-eueka</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
