--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	</dependencyManagement>
 
 	<modules>
-		<module>feign-demo-eureka</module>
+		<!--<module>feign-demo-eureka</module>-->
 		<!--<module>hystrix-demo-client-a</module>-->
 		<!--<module>hystrix-demo-client-b</module>-->
 		<!--<module>hystrix-demo-customer</module>-->
