--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
 	<modules>
 		<!--<module>feign-demo-eureka</module>-->
-		<module>feign-demo-client-a</module>
+		<!--<module>feign-demo-client-a</module>-->
 		<!--<module>hystrix-demo-client-b</module>-->
 		<!--<module>hystrix-demo-customer</module>-->
 	</modules>
