--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	<modules>
 		<!--<module>feign-demo-eureka</module>-->
 		<!--<module>feign-demo-client-a</module>-->
-		<!--<module>hystrix-demo-client-b</module>-->
+		<module>feign-demo-client-b</module>
 		<!--<module>hystrix-demo-customer</module>-->
 	</modules>
 </project>
