--- a/hystrix-demo-customer/pom.xml
+++ b/hystrix-demo-customer/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.liumapp.demo.hystrix</groupId>
-    <artifactId>spring-cloud-hystrix-demo</artifactId>
+    <groupId>com.liumapp.demo.feign</groupId>
+    <artifactId>spring-cloud-feign-demo</artifactId>
     <version>v1.0.0</version>
   </parent>
 
-  <groupId>com.liumapp.demo.hystrix.customer</groupId>
-  <artifactId>hystrix-demo-customer</artifactId>
+  <groupId>com.liumapp.demo.feign.customer</groupId>
+  <artifactId>feign-demo-customer</artifactId>
   <version>v1.0.0</version>
   <packaging>jar</packaging>
 
@@ -17,7 +17,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <name>hystrix-demo-customer</name>
+  <name>feign-demo-customer</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
@@ -36,11 +36,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-ribbon</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-hystrix</artifactId>
+      <artifactId>spring-cloud-starter-feign</artifactId>
     </dependency>
   </dependencies>
 
