--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,6 @@
 		<!--<module>feign-demo-eureka</module>-->
 		<!--<module>feign-demo-client-a</module>-->
 		<!--<module>feign-demo-client-b</module>-->
-		<!--<module>hystrix-demo-customer</module>-->
+		<module>feign-demo-customer</module>
 	</modules>
 </project>
