--- a/feign-demo-customer/pom.xml
+++ b/feign-demo-customer/pom.xml
@@ -38,6 +38,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-feign</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.liumapp.demo.feign.api</groupId>
+      <artifactId>feign-demo-api</artifactId>
+      <version>v1.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
