--- a/feign-demo-customer/src/main/resources/application.yml
+++ b/feign-demo-customer/src/main/resources/application.yml
@@ -10,3 +10,11 @@ eureka:
 server:
   port: 8083
 
+demo-client:
+  ribbon:
+    ConnectTimeout: 500
+    ReadTimeout: 100
+    OkToRetryOnAllOperations: true
+    MaxAutoRetriesNextServer: 2
+    MaxAutoRetries: 1
+
