config hystrix done

--- a/feign-demo-customer/src/main/resources/application.yml
+++ b/feign-demo-customer/src/main/resources/application.yml
@@ -21,9 +21,11 @@ demo-client:
 feign:
   hystrix:
     enabled: true
-    command:
-      default:
-        execution:
-          isolation:
-            thread:
-              timeoutInMilliseconds: 10000
+
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 10000
